<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Split Bill Lah</string>
    <string name="banner">Split Bill lah banner</string>
    <string name="brought_to_you">Brought to you by: </string>
    <string name="kuala_lumpur">Kuala Lumpur</string>

    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="dutch">Dutch</string>
    <string name="treat">Treat</string>
    <string name="share">Share</string>

    <!--- preferences strings -->
    <string name="pref_display_welcome">Display Welcome screen</string>
    <string name="pref_summ_display_welcome">Display Welcome screen on startup</string>
    <string name="pref_input_method">Default receipt mode</string>
    <string name="pref_summ_input_method">Default method of getting receipt on application start</string>
    <string name="pref_show_help_messages">Show help messages</string>
    <string name="pref_summ_show_help_messages">Display helper messages for how to use Split Bill Lah</string>

    <!--- Welcome Activity strings -->
    <string name="take_a_photo_receipt">Take a photo of receipt</string>
    <string name="select_image_from_gallery">Select an image from Gallery</string>
    <string name="manually_create_bill">Manually create bill</string>
    <string name="show_welcome">Show this screen next time</string>

    <string name="split_bill">Split Bill:</string>
    <string name="receipt">Receipt</string>
    <string name="cleaning_image">Cleaning image</string>
    <string name="blank"> </string>

    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="batch">Batch</string>
    <string name="gallery">Gallery</string>
    <string name="edit">Edit</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="crop">Crop</string>
    <string name="adjust_contrast">Adjust Contrast</string>
    <string name="adjust_shades">Adjust Shades</string>

    <string-array name="pref_input_method">
        <item name="pref_input_method_camera">Camera</item>
        <item name="pref_input_method_gallery">Gallery</item>
        <item name="pref_input_method_manual">Manually</item>
    </string-array>
    <string-array name="pref_input_method_values">
        <item name="camera">Camera</item>
        <item name="gallery">Gallery</item>
        <item name="edit">Edit</item>
    </string-array>

    <string name="dutch_hint">Pay for own items</string>
    <string name="treat_hint">Treat a person</string>
    <string name="share_hint">Split amount evenly</string>

    <string name="receipt_picture">Receipt picture</string>
    <string name="recognised_text">Recognised text</string>

    <string name="prev">Prev</string>
    <string name="done">Done</string>
    <string name="new_">New</string>
    <string name="select_all">Select All</string>
    <string name="total">Total</string>
    <string name="subtotal">Sub total</string>
    <string name="gst">GST</string>
    <string name="svc">SVC</string>
    <string name="guest">Guest</string>
    <string name="amount_init">Amount : $0</string>

    <string name="edit_bill">Edit Bill</string>
    <string name="create_bill">Create Bill</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="remove">Remove</string>
    <string name="add_item">Add Item</string>
    <string name="calculate_gst_svc">Calculate GST/SVC to get total</string>

    <!-- non literal representation -->
    <string name="symbol_currency">$</string>
    <string name="symbol_percent">%</string>

    <!--- custom_toast messages -->
    <string name="click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="crop_error_message">Whoops - your device doesn\'t support the crop action!</string>
    <string name="bill_not_balanced">Bill not balanced!\nPlease check totals</string>
    <string name="click_menu_to_edit_bill">Click menu to edit Bill</string>
    <string name="click_done_when_complete">Click DONE when complete</string>
    <string name="unknown_type">UNKNOWN TYPE</string>

    <!--- instructions -->
    <string name="select_receipt_instructions">
        Take a photo of receipt\n
        or\n
        Select an image from Gallery\n
        or\n
        Manually create bill
    </string>
    <string name="crop_picture_instructions">Crop picture to quantity, items, price and total</string>
    <string name="adjust_picture_instructions">Adjust the brightness and the shade of grey for better detection</string>
    <string name="bill_split_instructions">
        Pick one:\n
        \t DUTCH - Select each item and it\'s amount by person\n
        \t TREAT - Select which item to split evenly + DUTCH or SHARE\n
        \t SHARE - Split the total amount evenly to everyone
    </string>
    <string name="dutch_split_instructions">
        DUTCH - Pay for own items\n
        1. Select items for first Guest\n
        2. Click NEXT to select items for next Guest\n
        3. Or click DONE to pay for the rest of the bill
    </string>
    <string name="treat_split_instructions">
        TREAT - Treat a person\n
        1. Select items for the Guest you are treating\n
        2. Set the number of people that are sharing the treat\n
        3. Click NEXT to select items for the Guest that is treating
    </string>
    <string name="share_split_instructions">
        SHARE - Split costs evenly\n
        1. Select items for sharing\n
        2. Set the number of people that are sharing the items\n
        3. Click NEXT for the next split option\n
        4. Or click DONE to share the entire bill
    </string>
    <string name="title_activity_edit">Please double check</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="alphabets">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
</resources>
