<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="wwckl.projectmiki.activity.BillSplitterActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:orderInCategory="99"
        app:showAsAction="never"/>
    <item android:id="@+id/action_help"
        android:title="@string/help"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/dutch"
          android:title="@string/dutch"
          app:showAsAction="always|withText"/>
    <item android:id="@+id/treat"
          android:title="@string/treat"
          app:showAsAction="always|withText"/>
    <item android:id="@+id/share"
          android:title="@string/share"
          app:showAsAction="always|withText"/>
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/edit_bill"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="ifRoom"/>
</menu>
