<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="99" app:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/help"
        android:onClick="onOptionsItemSelected"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_camera"
        android:icon="@drawable/ic_camera_alt_white_24dp"
        android:title="@string/camera"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_gallery"
        android:icon="@drawable/ic_collections_white_24dp"
        android:title="@string/gallery"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/edit_bill"
        android:onClick="onOptionsItemSelected"
        app:showAsAction="ifRoom"/>
</menu>
