<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".WelcomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgSplitBillLah"
        android:src="@drawable/project_miki_banner"
        android:contentDescription="@string/banner"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brought_to_you"
        android:id="@+id/tvCredits"
        android:layout_toLeftOf="@+id/imgWWCode"
        android:layout_alignTop="@+id/imgWWCode"
        android:textColor="@color/secondary_lighter"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgWWCode"
        android:src="@drawable/wwc_logo"
        android:contentDescription="@string/banner"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imgSplitBillLah"
        android:background="@android:color/transparent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kuala_lumpur"
        android:id="@+id/tvCredits2"
        android:layout_toRightOf="@+id/imgWWCode"
        android:layout_alignBottom="@+id/imgWWCode"
        android:textColor="@color/secondary_lighter"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCamera"
        android:src="@drawable/ic_camera_alt_white_48dp"
        android:onClick="resultInputMethodSelected"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:layout_marginBottom="10dp"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGallery"
        android:src="@drawable/ic_collections_white_48dp"
        android:clickable="true"
        android:onClick="resultInputMethodSelected"
        android:layout_below="@+id/btnCamera"
        android:layout_alignLeft="@+id/btnCamera"
        android:layout_alignStart="@+id/btnCamera"
        android:background="@android:color/transparent"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEdit"
        android:src="@drawable/ic_edit_white_48dp"
        android:clickable="true"
        android:onClick="resultInputMethodSelected"
        android:layout_below="@+id/btnGallery"
        android:layout_alignLeft="@+id/btnGallery"
        android:layout_alignStart="@+id/btnGallery"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/take_a_photo_receipt"
        android:id="@+id/tvCamera"
        android:layout_alignBottom="@+id/btnCamera"
        android:layout_toRightOf="@+id/btnCamera"
        android:layout_toEndOf="@+id/btnCamera"
        android:textColor="@color/primary_text_default_material_dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_image_from_gallery"
        android:id="@+id/tvGallery"
        android:layout_alignBottom="@+id/btnGallery"
        android:layout_toLeftOf="@+id/btnGallery"
        android:layout_toStartOf="@+id/btnGallery"
        android:textColor="@color/primary_text_default_material_dark"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/manually_create_bill"
        android:id="@+id/tvEdit"
        android:layout_alignBottom="@+id/btnEdit"
        android:layout_toRightOf="@+id/btnEdit"
        android:layout_toEndOf="@+id/btnEdit"
        android:textColor="@color/primary_text_default_material_dark"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_welcome"
        android:id="@+id/cbShowWelcome"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:textColor="@color/secondary_lighter"/>
</RelativeLayout>