<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layoutEditFragment"
    android:gravity="fill_horizontal"
    android:showDividers="end"
    tools:context=".fragment.EditFragment"
    android:background="@color/background_material_light"
    style="@style/BillSplitterTheme">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollImage"
        android:layout_weight="10"
        android:fadeScrollbars="false"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgvReceipt"
            android:adjustViewBounds="true"
            android:contentDescription="@string/receipt" />
    </ScrollView>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollItemized"
        android:layout_weight="10"
        android:fadeScrollbars="false">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1"
                android:shrinkColumns="0"
                android:id="@+id/layoutEditItems">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/trAddItem">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/description"
                        android:id="@+id/tvItemDesc" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/amount"
                        android:id="@+id/tvItemAmt" />
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageButton"
                        android:src="@drawable/ic_add_black_18dp"
                        android:contentDescription="@string/add_item"
                        android:visibility="invisible" />
                </TableRow>

            </TableLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/item_price_include_gst_svc"
            android:id="@+id/cbUseSubtotals"
            android:onClick="onClickUseSubTotalsCheckbox" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btnAddItem"
            android:src="@drawable/ic_add_black_18dp"
            android:contentDescription="@string/add_item" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stretchColumns="3,5"
        android:id="@+id/layoutEditTotals">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trSubtotal"
            android:showDividers="beginning">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/svc"
                android:id="@+id/tvSVC" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etSvcPercent"
                android:selectAllOnFocus="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/symbol_percent"
                android:id="@+id/tvSvcPercentage" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/etSVC"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/subtotal"
                android:id="@+id/tvSubTotal" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/etSubTotal"
                android:selectAllOnFocus="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gst"
                android:id="@+id/tvGST" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/etGstPercent"
                android:selectAllOnFocus="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/symbol_percent"
                android:id="@+id/tvGstPercentage" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/etGST"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/total"
                android:id="@+id/tvTotal" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/etTotal"
                android:layout_column="3"
                android:selectAllOnFocus="true" />
        </TableRow>
    </TableLayout>

</LinearLayout>